unselectable dark mode toggle fixed

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1916,6 +1916,18 @@ video {
   padding-left: 0.20rem;
 }
 
+.pl-\[0\.22rem\] {
+  padding-left: 0.22rem;
+}
+
+.pl-\[0\.27rem\] {
+  padding-left: 0.27rem;
+}
+
+.pl-\[0\.26rem\] {
+  padding-left: 0.26rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -2274,6 +2286,10 @@ video {
 .hover\:shadow-lg:hover {
   --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.active\:w-\[25px\]:active {
+  width: 25px;
 }
 
 .active\:border-none:active {
